--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h1>SCROLL DOWN</h1>
 
   <video id="videoplayerhtml" class="f-video-player" preload="auto" poster="" muted>
-    <source src="https://www.apple.com/media/us/mac-pro/2013/16C1b6b5-1d91-4fef-891e-ff2fc1c1bb58/videos/macpro_main_desktop.mp4" type="video/mp4">
+    <source src="https://www.dropbox.com/s/4qfw4jsuv5kz6yuz0jwvi/Comp-1_1.mp4?raw=1" type="video/mp4">
     <source src="" type="video/webm">
     <source src="" type="video/ogg">
   </video>
