--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h1>SCROLL DOWN</h1>
 
   <video id="videoplayerhtml" class="f-video-player" preload="auto" poster="" muted>
-    <source src="https://www.dropbox.com/scl/fi/uzapp0pns6meanm2u7vw5/Manchester-United-Logo-ntro-After-Effects.mp4?rlkey=v5x8or4qg9sv7jzmgxrhisc0k&st=n22upg9k&raw=1" type="video/mp4">
+    <source src="https://www.dropbox.com/scl/fi/dgv07lfxusxka1qsuqvsf/Comp-1-scroll-friendly.mp4?rlkey=uef8tu03oxnjypb8persz6y5r&st=vre0uz7h&raw=1" type="video/mp4">
     <source src="" type="video/webm">
     <source src="" type="video/ogg">
   </video>
